@@ -1,3 +1,6 @@
+* Add erase on Many2One
+* Re-position icons on Many2One widget
+
 Version 4.0.0 - 2016-05-02
 * Bug fixes (see mercurial logs for details)
 * Timedelta uses 30 days for month
